Initial construction of the JourneyLog + reuse of Nav components

--- a/eJL_DotNet_React_Demo.csproj
+++ b/eJL_DotNet_React_Demo.csproj
@@ -21,10 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\components\JourneyLog.tsx" />
     <None Remove="ClientApp\src\components\LoginForm.tsx" />
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\components\JourneyLog.tsx" />
     <TypeScriptCompile Include="ClientApp\src\components\LoginForm.tsx" />
   </ItemGroup>
 
